<resources>
    <string name="app_name">SAP Moshtarian</string>
    <string name="app_name_fa">ساپ مشتریان</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">close</string>
    <string name="fontPath">font/IRANSans.ttf</string>
    <string name="crispURL">https://go.crisp.chat/chat/embed/?website_id=</string>
    <string name="Learning">آموزشی</string>
    <string name="Test">تست</string>
    <string name="demo">دمو</string>
    <string name="versionText">نسخه %1$s %2$s</string>
    <string name="newestVersion">آخرین نسخه قابل دریافت : %1$s</string>
    <string name="lastStableVersion">آخرین نسخه قابل استفاده : %1$s</string>
    <string name="forceUpdate">بروزرسانی ضروری</string>
    <string name="forceUpdateMessage">این نسخه از برنامه پشتیبانی نمیشود. \nلطفا نسخه جدید را نصب نمایید.</string>
    <string name="forceTestUpdateMessage">نسخه آزمایشی برنامه ارائه گردیده است. \nلطفا بازخورد خود را پس از استفاده از برنامه اعلام نمایید.</string>
    <string name="newVersionDownloaded">نسخه جدید در مسیر زیر ذخیره شد. لطفا نسبت به نصب این نسخه اقدام نمایید.</string>
    <string name="newFeaturesTitle">ویژگی های جدید</string>
    <string name="errorRootTitle">دستگاه روت</string>
    <string name="errorRoot">دستگاه شما روت شده می باشد و اجازه استفاده از برنامه را ندارید.</string>
    <string name="errorInvalidIMEI">شناسه نامعتبر</string>
    <string name="errorIMEI">شناسه دستگاه شما نامعتبر می باشد.</string>
    <string name="imeiCopied">شناسه دستگاه به شماره %1$s کپی شد.</string>
    <string name="errorDeviceLanguageTitle">تنظیمات دستگاه</string>
    <string name="errorDeviceLanguage">لطفا زبان دستگاه خود را به انگلیسی تغییر داده و دوباره تلاش کنید.</string>
    <string name="errorDeniedPermissionTitle">عدم دسترسی</string>
    <string name="errorDeniedPermission">دسترسی موردنیاز داده نشده است.</string>
    <string name="errorFakeLocationTitle">مکان یابی اشتباه</string>
    <string name="errorFakeLocation">اجازه استفاده از برنامه های تغییر موقعیت مکانی را ندارید.</string>
    <string name="errorGetLocation">خطا در تشخیص موقعیت مکانی</string>
    <string name="errorGetCustomerLocation">خطا در دریافت موقعیت مکانی مشتری با نام %1$s</string>
    <string name="errorGetCurrentLocation">خطا در دریافت موقعیت مکانی، لطفا دوباره تلاش نمایید.</string>
    <string name="enableWifi">فعال سازی wifi</string>
    <string name="enableWifiForBetterLocation">لطفا wifi دستگاه را برای تخمین بهتر موقعیت مکانی فعال کنید.</string>
    <string name="enableCellularTitle">اینترنت دیتا</string>
    <string name="enableCellular">برای کارکرد بهتر برنامه اینترنت دیتای خود را روشن نمایید.</string>
    <string name="errorGooglePlayServicesTitle">خدمات گوگل</string>
    <string name="errorGooglePlayServices">خدمات گوگل در دستگاه شما قدیمی می باشد. برای بروز رسانی به واحد کامپیوتر مراجعه فرمایید.</string>
    <string name="errorFindServerIPTitle">خطا در یافتن سرویس دهنده</string>
    <string name="errorFindServerIP">سرویس دهنده ای پیدا نشد، لطفا اتصال خود به اینترنت را بررسی کرده و مجددا تلاش نمایید و در صورت عدم برقراری اتصال با پشتیبانی تماس بگیرید.</string>
    <string name="errorConnectServer">خطا در ارتباط با سرور</string>
    <string name="errorLocalDateTimeTitle">تفاوت زمان</string>
    <string name="invalidTime">زمان انتخاب شده نامعتبر می باشد.</string>
    <string name="errorLocalDateTime">تاریخ و زمان دستگاه شما نادرست می باشد. لطفا بروزرسانی نمایید.</string>
    <string name="serverTime">زمان سرور</string>
    <string name="deviceTime">زمان دستگاه</string>
    <string name="timeDiff">اختلاف زمان</string>
    <string name="timeDiffGetProgram">زمان سپری شده دریافت برنامه</string>
    <string name="DataCapacityGetProgram">حجم اطلاعات دریافت برنامه</string>
    <string name="errorGetDateTimeData">خطا در دریافت تاریخ و زمان</string>
    <string name="errorGetDataTitle">خطا در دریافت اطلاعات</string>
    <string name="errorGetData">خطا در دریافت اطلاعات، لطفا دوباره تلاش کنید.</string>
    <string name="loadData">درحال بارگذاری اطلاعلات، لطفا صبر کنید.</string>
    <string name="errorGetDataChart">اطلاعات موجود نمی باشد.</string>
    <string name="errorGetDataEmpty">اطلاعات موجود نمی باشد.</string>
    <string name="errorGetDataAndGetProgram">خطا در دریافت اطلاعات، لطفا دریافت برنامه نمایید.</string>
    <string name="errorGetProductItems">خطا در دریافت اطلاعات محصول</string>
    <string name="errorGetAnbarItems">خطا در دریافت اطلاعات انبار</string>
    <string name="errorGetAds">خطا در دریافت تبلیغات</string>
    <string name="errorGetElatAdamMoarefiMoshtary">خطا در دریافت علت عدم معرفی مشتری</string>
    <string name="nothingItemForSearch">گزینه ای برای جستجو وجود ندارد.</string>
    <string name="enterValueForSearch">لطفا کلمه ای را برای جستجو وارد نمایید.</string>
    <string name="errorSendData">خطا در ارسال اطلاعات</string>
    <string name="errorNotExistItemForSend">گزینه ای برای ارسال وجود ندارد.</string>
    <string name="errorSendOtherData">خطا در ارسال سایر اطلاعات</string>
    <string name="successSendData">اطلاعات با موفقیت ارسال شد.</string>
    <string name="successSaveData">اطلاعات با موفقیت ثبت شد.</string>
    <string name="successGetData">اطلاعات با موفقیت دریافت شد.</string>
    <string name="notFoundData">داده ای دریافت نشد.</string>
    <string name="unregisteredDeviceTitle">دستگاه ثبت نشده</string>
    <string name="unregisteredDevice">دستگاه شما در سیستم تعریف نشده است. لطفا با واحد کامپیوتر تماس بگیرید.</string>
    <string name="errorGetNoeForoshandehTitle">نوع فروشنده</string>
    <string name="errorGetNoeForoshandeh">خطا در تشخیص نوع فروشنده. لطفا دوباره برنامه را باز کنید.</string>
    <string name="menu">منو</string>
    <string name="errorGetMenuTitle">خطا در دریافت منو</string>
    <string name="errorGetMenu">خطایی در دریافت منو رخ داد. برنامه دوباره باز کنید و در صورت وجود مشکل با واحد کامپیوتر تماس بگیرید.</string>
    <string name="newVersion">نسخه جدید</string>
    <string name="outOfDateVersion">این نسخه از برنامه دیگر پشتیبانی نمیشود و باید نسخه جدید را نصب نمایید.</string>
    <string name="newVersionReleased">نسخه جدیدی از برنامه ارائه گردیده است. تمایل به نصب نسخه جدید دارید؟</string>
    <string name="newVersionAvailable">نسخه جدید برنامه در تاریخ %s منتشر می شود.</string>
    <string name="sendLogsWithEmailAlert">خطایی در ارسال اطلاعات رخ داد، در صورت تمایل برای ارسال اطلاعات از طریق ایمیل، لطفا \'ارسال\' را انتخاب نمایید.</string>
    <string name="errorSendMail">خطا در ارسال ایمیل</string>
    <string name="subjctOfSendExceptionToMail">Exceptions</string>
    <string name="successfullySentMail">ارسال ایمیل با موفقیت انجام شد.</string>
    <string name="successfullyDoneOps">عملیات با موفقیت انجام شد.</string>
    <string name="updateSuccessed">بروز رسانی با موفقیت انجام شد.</string>
    <string name="updateFailed">بروز رسانی با خطا مواجه شد.</string>
    <string name="failedOps">عملیات با خطا مواجه شد.</string>
    <string name="help">راهنما</string>
    <string name="search">جستجو</string>
    <string name="filter">فیلتر</string>
    <string name="removeFilter">حذف فیلتر</string>
    <string name="searchKalaName">جستجو نام کالا</string>
    <string name="searchCustomerName">جستجو نام مشتری</string>
    <string name="searchCustomerCode">جستجو کد مشتری</string>
    <string name="searchNameTablo">جستجو نام تابلو</string>
    <string name="searchTelephone">جستجو شماره تلفن</string>
    <string name="searchFactorNumber">جستجو شماره فاکتور</string>
    <string name="refresh">بروزرسانی</string>
    <string name="selectRadius">انتخاب شعاع</string>
    <string name="install">نصب</string>
    <string name="apply">تایید</string>
    <string name="close">بستن</string>
    <string name="cancel">انصراف</string>
    <string name="back">بازگشت</string>
    <string name="add">افزودن</string>
    <string name="addBased">افزودن با مبنا</string>
    <string name="addNonBased">افزودن بی مبنا</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="send">ارسال</string>
    <string name="goodsBaseInfo">اطلاعات پایه کالا</string>
    <string name="goodsList">لیست کالا</string>
    <string name="updateGallery">بروز رسانی تصاویر</string>
    <string name="setting">تنظیمات</string>
    <string name="paperSizeForPrint">سایز کاغذ چاپ</string>
    <string name="invalidPaperSizeForPrint">سایز کاغذ انتخاب شده نامعتبر می باشد.</string>
    <string name="printerType">نوع چاپگر</string>
    <string name="invalidPrinterType">چاپگر انتخاب شده نامعتبر می باشد.</string>
    <string name="printType">نوع چاپ فاکتور</string>
    <string name="invalidPrintType">نوع چاپ فاکتور انتخاب شده نامعتبر می باشد.</string>
    <string name="PrinterNotAvailable">پرینتر موجود نیست</string>
    <string name="copied">کپی شد</string>
    <string name="copy">کپی</string>
    <string name="home">خانه</string>
    <string name="sell">فروش</string>
    <string name="rial">ریال</string>
    <string name="gram">گرم</string>
    <string name="rialKharid">ریال خرید</string>
    <string name="vosol">وصول</string>
    <string name="marketing">بازاریابی</string>
    <string name="report">گزارش</string>
    <string name="system">سیستم</string>
    <string name="textColon">متن :</string>
    <string name="dateColon">تاریخ :</string>
    <string name="foroshandeh">فروشنده</string>
    <string name="foroshandehProfileImage">پروفایل فروشنده</string>
    <string name="foroshandehInfo">اطلاعات فروشنده</string>
    <string name="noeForoshandeh">نوع فروشنده</string>
    <string name="foroshandehSard">فروشنده سرد</string>
    <string name="foroshandehGarm">فروشنده گرم</string>
    <string name="foroshandehHoshmand">فروشنده هوشمند</string>
    <string name="mamorPakhshSard">مامور پخش سرد</string>
    <string name="mamorPakhshHoshmand">مامور پخش هوشمند</string>
    <string name="mamorTozie">مامور توزیع</string>
    <string name="sarparast">سرپرست</string>
    <string name="amargar">آمارگر</string>
    <string name="modir">رئیس</string>
    <string name="success">موفق</string>
    <string name="error">خطا</string>
    <string name="errorOccurred">خطایی رخ داد.</string>
    <string name="errorGetPackageName">خطا در تشخیص نام پکیج</string>
    <string name="installManually">خطایی در نصب خودکار برنامه رخ داد، لطفا نسخه جدید از پوشه مربوطه نصب نمایید.</string>
    <string name="downloadUrlNotFound">لینک دانلود فایل یافت نشد.</string>
    <string name="downloadFailed">خطا در دانلود</string>
    <string name="extractFailed">خطا در استخراج فایل</string>
    <string name="warning">هشدار</string>
    <string name="getProgram">دریافت برنامه</string>
    <string name="getProgramWarning">آیـا اطلاعـات دریـافت شـوند؟ \nدر صـورت ادامـه عملیـات تمـام اطلاعـات موجود حـذف خـواهنـد شــد.</string>
    <string name="getProgramError">دریافت اطلاعات %1$s \n با خطا مواجه شد.</string>
    <string name="olaviat">اولویت</string>
    <string name="customerCode">کد مشتری</string>
    <string name="customerName">نام مشتری</string>
    <string name="sumRialKharid">جمع ریال خرید</string>
    <string name="tedadAghlam">تعداد اقلام</string>
    <string name="sumTedad">جمع تعداد</string>
    <string name="saateVorod">ساعت ورود</string>
    <string name="saateKhoroj">ساعت خروج</string>
    <string name="ZamanDarMaghaze">زمان در مغازه</string>
    <string name="nameKala">نام کالا</string>
    <string name="shomareCheck">شماره چک</string>
    <string name="mablaghCheck">مبلغ چک</string>
    <string name="mandehCheck">مانده چک</string>
    <string name="sarResidCheck">سررسید چک</string>
    <string name="shomareFaktor">شماره فاکتور</string>
    <string name="mablaghFaktor">مبلغ فاکتور</string>
    <string name="dalilAdamDarkhast">دلیل عدم درخواست</string>
    <string name="reportForoshandehVisit">گزارش ویزیت فروشنده</string>
    <string name="reportCheckBargashty">گزارش چک برگشتی</string>
    <string name="radif">ردیف</string>
    <string name="vazeiatMorajee">وضعیت مراجعه</string>
    <string name="dateFaktor">تاریخ فاکتور</string>
</resources>