<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context=".MVP.View.RptDarkhastFaktorVazeiatActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layTitle"
        android:layoutDirection="rtl"
        android:background="@color/colorPrimary"
        android:padding="@dimen/paddingTitle"
        android:elevation="@dimen/elevationActivityTitle"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblActivityTitle"
            android:text="@string/reportForoshandehVisit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/lblActivityTitle"
            android:layout_centerInParent="true"/>

        <!-- Must be last for right layering display -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                android:layoutDirection="ltr"/>
            <com.miguelcatalan.materialsearchview.MaterialSearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchView"
                style="@style/MaterialSearchViewStyle"
                android:layoutDirection="ltr"
                android:layout_alignParentRight="true"
                android:hint="@string/nameKala"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layTableTitle"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:layout_below="@+id/layTitle">
        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/lblOlaviat"
            android:text="@string/olaviat"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/lblCustomerCode"
            android:text="@string/customerCode"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/lblCustomerName"
            android:text="@string/customerName"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/lblRialKharid"
            android:text="@string/rialKharid"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/lblSaateVorod"
            android:text="@string/saateVorod"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/lblSaateKhoroj"
            android:text="@string/saateKhoroj"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/lblZamanDarMaghaze"
            android:text="@string/ZamanDarMaghaze"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/lblVazeiatMorajee"
            android:text="@string/vazeiatMorajee"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:id="@+id/lblDalilDarkhastManfi"
            android:text="@string/dalilAdamDarkhast"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/lblTedadAghlam"
            android:text="@string/tedadAghlam"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        android:scrollbars="vertical"
        android:layoutDirection="rtl"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/layTableTitle"
        android:layout_above="@+id/layTableFooter">
    </androidx.recyclerview.widget.RecyclerView>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fabMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/colorFabMenu"
        fab:menu_colorPressed="@color/colorFabMenuClick"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/ic_menu"
        fab:menu_labels_colorNormal="@color/colorWhite"
        fab:menu_labels_colorPressed="@color/colorWhite"
        fab:menu_labels_colorRipple="@color/colorWhite"
        fab:menu_labels_customFont="@string/fontPath"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_position="right"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="@color/colorTextPrimary"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh"
            fab:fab_colorNormal="@color/colorFabRefresh"
            fab:fab_colorPressed="@color/colorFabRefreshClick"
            fab:fab_label="@string/refresh"
            fab:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_table_list"
            fab:fab_colorNormal="@color/colorFabList"
            fab:fab_colorPressed="@color/colorFabListClick"
            fab:fab_label="نمایش لیست"
            fab:fab_size="normal" />
    </com.github.clans.fab.FloatingActionMenu>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layTableFooter"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layoutDirection="rtl">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/lblSumRialKharid"
            android:text="@string/sumRialKharid"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_content_cell_bg_gray"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/lblSumTedadAghlam"
            android:text="@string/sumTedad"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_content_cell_bg_gray"
            android:padding="5dp"/>
    </LinearLayout>

</RelativeLayout>