<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layTableTitle"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_below="@+id/layTitle">
        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/lblRadif"
            android:text="@string/radif"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/lblCustomerCode"
            android:text="@string/customerCode"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:id="@+id/lblCustomerName"
            android:text="@string/customerName"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/lblTaakhirFaktor"
            android:text="@string/dateFaktor"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/lblShomarehFaktor"
            android:text="@string/shomareFaktor"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/lblMablaghFaktor"
            android:text="@string/mablaghFaktor"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/FontSize14"
            android:gravity="center"
            android:background="@drawable/table_header_cell_bg"
            android:padding="5dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recyclerView"
        android:scrollbars="vertical"
        android:layoutDirection="rtl"
        android:layout_marginBottom="10dp"
        android:paddingBottom="75dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/layTableTitle"
        app:layout_constraintBottom_toTopOf="@+id/layTableFooter"
        >
    </androidx.recyclerview.widget.RecyclerView>



</androidx.constraintlayout.widget.ConstraintLayout>